change in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://127.0.0.1:27017/wanderlust
+MONGO_URI=mongodb+srv://ankit0841439:Ankit@2004@cluster0.rxshzhl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
